# try-deploy-actix-web-to-cloud-run

./: .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
src/: http_client.rs  main.rs
